--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 		<em>Vijayawada, 522502.</em>
 		</p>
 		<p>
-			I am a Computer Science Student at K L University. My specializations are Artificial Intelligence and Internet Of Things. I completed Two Global Certifications They are <a href="https://www.credential.net/25d90b6a-950b-488a-9015-9ab987608838##gs.xqktx2" target="_blank">Google Tensorflow Developer Certification</a> and <a href="https://certificates.automationanywhere.com/5dc3ec9b-c0ba-4aeb-bc6f-e79dca21146c" target="_blank">Automation Anywhere  Advanced RPA Professional</a>. I worked as an intern at Samsung in Samung prism Program and do a research on implementation of operations in armnn onnxparser for six months. my Technical skills are
+			I am a Computer Science Student at K L University. My specializations are Artificial Intelligence and Internet Of Things. I completed Two Global Certifications They are <a href="https://www.credential.net/25d90b6a-950b-488a-9015-9ab987608838##gs.xqktx2" target="_blank">Google Tensorflow Developer Certification</a> and <a href="https://certificates.automationanywhere.com/5dc3ec9b-c0ba-4aeb-bc6f-e79dca21146c" target="_blank">Automation Anywhere  Advanced RPA Professional</a>. I worked as an intern at Samsung in Samung prism Program and did a research on implementation of operations in armnn onnxparser for six months. my Technical skills are
 			Python, SQL, Html, Css, Javascript, MongoDB and Tensorflow Developer.
 		</p>
 		<p> Link to: <a href="Contactme.html">Contact information</a></p>
@@ -26,7 +26,7 @@
 		<h3>Education Background</h3>
 		<ul>
 			<li>I completed My Graduation in K L University.</li>
-			<li>I completed my Intermediate in Naraya Junior College.</li>
+			<li>I completed my Intermediate in Narayana Junior College.</li>
 			<li>I completed my Metriculation in Ravindra Bharathi School</li>
 		</ul>
 		<hr size="3" noshade="">
