--- a/hobbies.html
+++ b/hobbies.html
@@ -4,6 +4,7 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>My Hobbies</title>
+	<link rel="stylesheet" type="text/css" href="css/styles.css">
 </head>
 <body>
 	<h3>My Hobbies</h3>
@@ -13,7 +14,7 @@
 		 <li>Reading Books</li>
 		 <li>Sports</li>
 		</ol>
-	<hr size="3" noshade>
+	<hr>
 	<a href="hobbies.html">My Hobbies</a>
 	<a href="index.html">Profile</a>
 	<a href="Contactme.html">Contactme</a>
