--- a/Contactme.html
+++ b/Contactme.html
@@ -4,6 +4,7 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Contact Me</title>
+	<link rel="stylesheet" type="text/css" href="css/styles.css">
 </head>
 <body>
 	<center>
@@ -25,10 +26,10 @@
 		<br>
 		<br>
 		<label>Your Message:</label><br>
-		<textarea name="YourMessage" rows="10" cols="30"></textarea>
+		<textarea name="YourMessage " rows="10" cols="30"></textarea>
 		<input type="submit" name="">
 	</form>
-	<hr size="3" noshade="">
+	<hr>
 	<a href="hobbies.html">My Hobbies</a>
 	<a href="index.html">Profile</a>
 	<a href="Contactme.html">Contactme</a>
