--- a/index.html
+++ b/index.html
@@ -1,101 +1,60 @@
 <!DOCTYPE html>
 <html>
-	<head>
-		<meta charset="utf-8">
-		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<title>🖤 Aravind's Personal Site</title>
-		<link rel="stylesheet" type="text/css" href="css/styles.css">
-	</head>
-	<body>
-		<center>
-			<img src="IMG_20220107_213627.jpg" alt="Aravind's Profile">
-			<h1>
-				MATAM ARAVIND
-			</h1>
-		</center>
-		<p>
-		<em>I am a Enthusiastic Computer Science Student At <strong><a href="https://www.kluniversity.in/">K L University</a></strong>.</em>
-		<em>Vijayawada, 522502.</em>
-		</p>
-		<p>
-			I am a Computer Science Student at K L University. My specializations are Artificial Intelligence and Internet Of Things. I completed Two Global Certifications They are <a href="https://www.credential.net/25d90b6a-950b-488a-9015-9ab987608838##gs.xqktx2" target="_blank">Google Tensorflow Developer Certification</a> and <a href="https://certificates.automationanywhere.com/5dc3ec9b-c0ba-4aeb-bc6f-e79dca21146c" target="_blank">Automation Anywhere  Advanced RPA Professional</a>. I worked as an intern at Samsung in Samung prism Program and do a research on implementation of operations in armnn onnxparser for six months. my Technical skills are
-			Python, SQL, Html, Css, Javascript, MongoDB and Tensorflow Developer.
-		</p>
-		<p> Link to: <a href="Contactme.html">Contact information</a></p>
-		<hr>
+<head>
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<title>Matam Aravind</title>
+	<link rel="stylesheet" type="text/css" href="css/styles.css">
+	<link rel="icon" href="favicon.ico">
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Merriweather&family=Montserrat&family=Sacramento&display=swap" rel="stylesheet">
+</head>
+<body>
+	<div class="top-container">
+		<img class="top-cloud" src="images/cloud.png" alt="cloud-img">
+		<h1 class="heading">I'm <span class="h1-name">Aravind</span></h1>
+		<h2 class="sub-heading">a Software Developer</h2>
+		<img class="bottom-cloud" src="images/cloud.png" alt="cloud-img">
+		<img class="mountain" src="images/mountain.png" alt="mountain-img">
+	</div>
+<div class="middle-container">
+  <div class="profile">
+    <img src="images/Profile pic.png" alt="My profile pic">
+    <h2>Hello.</h2>
+    <p class="sub-line">I am an Enthusiastic Computer Science Student At<a class="profile-link" href="https://www.kluniversity.in/"> K L University</a>.</p>
+    <p class="profile-description">I am a Computer Science Student at K L University. My specializations are Artificial Intelligence and Internet Of Things. I completed Two Global Certifications They are <a class="profile-link" href="https://www.credential.net/25d90b6a-950b-488a-9015-9ab987608838##gs.xqktx2" target="_blank">Google Tensorflow Developer Certification</a> and <a class="profile-link" href="https://certificates.automationanywhere.com/5dc3ec9b-c0ba-4aeb-bc6f-e79dca21146c" target="_blank">Automation Anywhere  Advanced RPA Professional</a>. I worked as an intern at Samsung in Samung prism Program and do a research on implementation of operations in armnn onnxparser for six months. my Technical skills are Python, SQL, Html, Css, Javascript, MongoDB and Tensorflow Developer.</p>
+  </div>
+  <hr>
+  <div class="skills">
+    <h2>My Skills.</h2>
+    <div class="skill-row">
+      <img class="skills-im1" src="images/skills.png" alt="skills-icon">
+      <h3>Python</h3>
+      <p class="code-skill-description-1">Lorem ipsum dolor sit amet, quis in duis, iaculis id felis. Consectetuer vestibulum, nunc urna lectus, erat ligula. Hendrerit nam, lectus ante, ut lorem eros.</p>
+    </div>
+    <div class="skill-row">
+      <img class="skills-im2" src="images/skills2.png" alt="skills2-icon">
+      <h3>Lorem Ipsum Dolor</h3>
+      <p class="code-skill-description-2">Lorem ipsum dolor sit amet, mauris sed consectetuer. Etiam et eu, bibendum interdum, lacus quis mauris. Curabitur wisi, quisque vel eu, rutrum nam.</p>
+    </div>
+  </div>
+  <hr>
+  <div class="contact-me">
+    <h2>Get In Touch</h2>
+    <h3>If you love to Contact me and share anything.</h3>
+    <p class="contact-message">Do you love creating and Designing? We can learn and code.</p>
+    <a class="btn" href="mailto:aravindmatam329@gmail.com">Contact Me</a>
+  </div>
+</div>
 
-		<h3>Education Background</h3>
-		<ul>
-			<li>I completed My Graduation in K L University.</li>
-			<li>I completed my Intermediate in Naraya Junior College.</li>
-			<li>I completed my Metriculation in Ravindra Bharathi School</li>
-		</ul>
-		<hr>
-		<h3>Work Experience</h3>
-		<table cellspacing="10">
-			<thead>
-				<tr>
-					<th>Dates</th>
-					<th>Work</th>
-				</tr>
-			</thead>
-			<tbody>
-			<tr>
-				<td>01Jul2021-01Mar2022 </td>
-				<td>Intern as a Researcher in Samsung Prism.</td>
-			</tr>
-			</tbody>
-		</table>
-		<hr>
-		<h3>Skills</h3>
-		<table cellspacing="10">
-			<tr>
-				<td>
-					<table>
-						<tr>
-							<td>Python</td>
-							<td>⭐⭐⭐⭐⭐</td>
-						</tr>
-						<tr>
-							<td>SQL</td>
-							<td>⭐⭐⭐⭐</td>
-						</tr>
-						<tr>
-							<td>Java</td>
-							<td>⭐⭐⭐</td>
-						</tr>
-						<tr>
-							<td>C</td>
-							<td>⭐⭐</td>
-						</tr>
 
-					</table>
-				</td>
-				<td>
-					<table>
-						<tr>
-							<td>Web Development</td>
-							<td>⭐⭐⭐⭐⭐</td>
-						</tr>
-						<tr>
-							<td>Artificial Intelligence</td>
-							<td>⭐⭐⭐⭐</td>
-						</tr>
-						<tr>
-							<td>Data Science</td>
-							<td>⭐⭐⭐</td>
-						</tr>
-						<tr>
-							<td>Database</td>
-							<td>⭐⭐⭐</td>
-						</tr>
-					</table>
-				</td>
-			</tr>
-		</table>
-		<hr>
-		<a href="hobbies.html">My Hobbies</a>
-		<a href="index.html">Profile</a>
-		<a href="Contactme.html">Contactme</a>
-	</body>
+<div class="bottom-container">
+  <a class="footer-link" href="https://www.linkedin.com/in/aravind-matam-249378198/">LinkedIn</a>
+  <a class="footer-link" href="https://github.com/aravind329">Github</a>
+  <a class="footer-link" href="https://aravind329.github.io/Cv/">Website</a>
+  <p class="copyright">© 2022 Matam Aravind</p>
+</div>
+
+</body>
 </html>
