--- a/index.html
+++ b/index.html
@@ -30,14 +30,12 @@
     <h2>My Skills.</h2>
     <div class="skill-row">
       <img class="skills-im1" src="images/skills.png" alt="skills-icon">
-      <h3>Python</h3>
-      <p class="code-skill-description-1">Lorem ipsum dolor sit amet, quis in duis, iaculis id felis. Consectetuer vestibulum, nunc urna lectus, erat ligula. Hendrerit nam, lectus ante, ut lorem eros.</p>
-    </div>
+      <h3>Technical Skills</h3>
+      <p class="code-skill-description-1">Python, SQL, HTML, CSS, JavaScript, ReactJS, Full Stack Web Development in Pyhton, Deep Learning, Tensorflow Developer.</div>
     <div class="skill-row">
       <img class="skills-im2" src="images/skills2.png" alt="skills2-icon">
-      <h3>Lorem Ipsum Dolor</h3>
-      <p class="code-skill-description-2">Lorem ipsum dolor sit amet, mauris sed consectetuer. Etiam et eu, bibendum interdum, lacus quis mauris. Curabitur wisi, quisque vel eu, rutrum nam.</p>
-    </div>
+      <h3>General Skills</h3>
+      <p class="code-skill-description-2">Leadership, Communication, Negotiation, Flexible.</div>
   </div>
   <hr>
   <div class="contact-me">
